#770 - fix button overlap in scratchpad

--- a/src/components/Editor/components/MyWork/components/MyWorkEditorButtons/components/InputContainerSelectors/styles.scss
+++ b/src/components/Editor/components/MyWork/components/MyWorkEditorButtons/components/InputContainerSelectors/styles.scss
@@ -4,6 +4,7 @@
     position: relative;
     right: 2px;
     margin-top: 1px;
+    z-index: 10;
 
     >span {
         flex: 1;
